<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="practicum_android_developer_url" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="practicum_offer_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_app_text" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_email" translatable="false">giraffe.n@yandex.ru</string>
    <string name="support_email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="server_error" translatable="false">Проблемы со связью

Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_search" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="duration" translatable="false">Длительность</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="country" translatable="false">Страна</string>
    <string name="year" translatable="false">Год</string>





</resources>