<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/settings_icon"
        app:title="@string/settings"
        app:titleTextColor="@color/settings_text" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/SettingsRow"
        android:layout_marginTop="@dimen/layout_max"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/dark_theme"
        android:textColor="@color/settings_text"
        android:textSize="@dimen/base_text_size" />

    <LinearLayout
        style="@style/SettingsRow"
        android:id="@+id/share_button"
        >


        <TextView
            android:text="@string/share_app"
            style="@style/SettingsText"/>

        <ImageView
            android:layout_width="@dimen/layout_max"
            android:layout_height="@dimen/layout_max"
            android:src="@drawable/ic_share"
             />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsRow"
        android:id="@+id/support_button"

        >

        <TextView

            android:text="@string/write_to_support"
            style="@style/SettingsText" />

        <ImageView
            android:layout_width="@dimen/layout_max"
            android:layout_height="@dimen/layout_max"
            android:src="@drawable/ic_support"
            />
    </LinearLayout>

    <LinearLayout
       style="@style/SettingsRow"
        android:id="@+id/agreement_button"
        >

        <TextView
            android:text="@string/user_agreement"
            style="@style/SettingsText" />

        <ImageView
            android:layout_width="@dimen/layout_max"
            android:layout_height="@dimen/layout_max"
            android:src="@drawable/ic_arrow_forward"
             />
    </LinearLayout>

</LinearLayout>