<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingLeft="@dimen/main_padding"
    android:paddingRight="@dimen/main_padding"
    android:paddingBottom="@dimen/main_padding">





    <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:textSize="22sp"
        android:layout_marginBottom="28dp"

        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_zero"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text = "@string/search"
            android:textSize="@dimen/button_text_size"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/main_padding"
            app:icon = "@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@android:color/black"
            android:layout_marginBottom="@dimen/main_padding"


            />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_zero"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text = "@string/media_library"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/main_padding"
        app:icon = "@drawable/ic_music"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@android:color/black"
        android:layout_marginBottom="@dimen/main_padding"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_zero"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text = "@string/settings"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/main_padding"
        app:icon = "@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@android:color/black"
        android:layout_marginBottom="28dp"

        />






</LinearLayout>