<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_bg"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_bottom">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/settings_icon"

        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/layout_max"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/layout_max"/>
        
        <ImageView
            android:id="@+id/cover"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="@dimen/layout_zero"
            android:layout_marginTop="@dimen/cover_margin_top"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@drawable/ic_track_plug_312_312"/>
        <TextView
            android:id="@+id/track_name"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_max"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/settings_text"
            android:textSize="@dimen/track_name"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cover"
            tools:text="Yesterday (Remastered 2009)"/>

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="@dimen/layout_zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_medium"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/settings_text"
            android:textSize="@dimen/artist_name"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/track_name"
            tools:text="The Beatles"/>

        <ImageButton
            android:id="@+id/add_playlist_button"
            android:layout_width="@dimen/add_playlist"
            android:layout_height="@dimen/add_playlist"
            android:src="@drawable/ic_add_playlist_51_51"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/play_button"/>


        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="@dimen/play_button"
            android:layout_height="@dimen/play_button"
            android:layout_marginTop="@dimen/margin_play_button"
            android:src="@drawable/ic_play_button_100_100"
            android:background="@null"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/artist_name"/>

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="@dimen/add_playlist"
            android:layout_height="@dimen/add_playlist"
            android:background="@null"
            android:src="@drawable/ic_favorite_51_51"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <TextView
            android:id="@+id/playback_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/time"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/settings_text"
            android:textSize="@dimen/artist_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            android:text="00:30"/>

        <TextView
            android:id="@+id/duration_label"
            style="@style/Playlist"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/playback_time" />

        <TextView
            android:id="@+id/duration_value"
            style="@style/PlaylistValue"
            tools:text="5:35"
            app:layout_constraintBaseline_toBaselineOf="@+id/duration_label"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline" />
        <TextView
            android:id="@+id/album_label"
            style="@style/Playlist"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/duration_label" />

        <TextView
            android:id="@+id/album_value"
            style="@style/PlaylistValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/album_label"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            tools:text="Yesterday (Remastered 2009)" />
        <androidx.constraintlayout.widget.Group
            android:id="@+id/album_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="album_label,album_value" />

        <TextView
            android:id="@+id/year_label"
            style="@style/Playlist"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/album_label" />

        <TextView
            android:id="@+id/year_value"
            style="@style/PlaylistValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/year_label"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            tools:text="1965" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/year_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="year_label,year_value" />

        <TextView
            android:id="@+id/genre_label"
            style="@style/Playlist"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/year_label" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/PlaylistValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/genre_label"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            tools:text="Rock" />

        <TextView
            android:id="@+id/country_label"
            style="@style/Playlist"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/genre_label" />

        <TextView
            android:id="@+id/country_value"
            style="@style/PlaylistValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/country_label"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            tools:text="Великобритания" />







    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>